WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
176776
innerText getter fails tests for <p> without margin and <h1>-<h6>
https://bugs.webkit.org/show_bug.cgi?id=176776
Summary
innerText getter fails tests for <p> without margin and <h1>-<h6>
Simon Pieters (:zcorpan)
Reported
2017-09-12 03:46:56 PDT
See
https://github.com/w3c/web-platform-tests/pull/7330
Attachments
Patch
(2.81 MB, patch)
2024-05-07 17:14 PDT
,
Ahmad Saleem
no flags
Details
Formatted Diff
Diff
Patch
(2.81 MB, patch)
2024-05-08 03:42 PDT
,
Ahmad Saleem
no flags
Details
Formatted Diff
Diff
Patch
(2.80 MB, patch)
2024-05-08 07:26 PDT
,
Ahmad Saleem
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2022-08-10 03:23:59 PDT
Safari Technical Preview still fail quite a lot of "getter" tests:
https://wpt.fyi/results/html/dom/elements/the-innertext-and-outertext-properties/getter.html?label=master&label=experimental&aligned&view=subtest&q=innertext
Just wanted to update. Thanks!
Radar WebKit Bug Importer
Comment 2
2022-08-10 10:53:34 PDT
<
rdar://problem/98459918
>
Ahmad Saleem
Comment 3
2024-04-27 07:02:11 PDT
***
Bug 273219
has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 4
2024-04-27 07:05:39 PDT
Let's give it a try - PR -
https://github.com/WebKit/WebKit/pull/27835
(Still in Draft - might need to rebaseline bunch of tests).
Ahmad Saleem
Comment 5
2024-05-07 17:14:55 PDT
Created
attachment 471306
[details]
Patch
Ryosuke Niwa
Comment 6
2024-05-07 18:05:39 PDT
Comment on
attachment 471306
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=471306&action=review
> Source/WebCore/editing/TextIterator.cpp:928 > + if (RefPtr element = dynamicDowncast<HTMLElement>(node))
Why not just: return node->hasTagName(pTag);
Ahmad Saleem
Comment 7
2024-05-08 03:42:37 PDT
Created
attachment 471312
[details]
Patch
Ahmad Saleem
Comment 8
2024-05-08 03:43:39 PDT
(In reply to Ryosuke Niwa from
comment #6
)
> Comment on
attachment 471306
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=471306&action=review
> > > Source/WebCore/editing/TextIterator.cpp:928 > > + if (RefPtr element = dynamicDowncast<HTMLElement>(node)) > > Why not just: > return node->hasTagName(pTag);
Done and did this: return node.hasTagName(pTag); Adding `->` was giving error and this is first time doing via bugzilla, it removed your r+. :-(
Ahmad Saleem
Comment 9
2024-05-08 07:26:56 PDT
Created
attachment 471316
[details]
Patch
Ahmad Saleem
Comment 10
2024-05-08 14:05:08 PDT
Marking this as 'RESOLVED FIXED' since this landed. Commit:
https://github.com/WebKit/WebKit/commit/2eee050cf9ac6cface6d3cab4355a4ab42998dc5
Closing my GitHub PR as well - which is 1-1 same as this attached patch and passing all EWS results. PR -
https://github.com/WebKit/WebKit/pull/27835
Aditya Keerthi
Comment 11
2024-05-14 17:03:29 PDT
Re-opening, as this was reverted in
https://commits.webkit.org/278785@main
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug