innerText getter fails tests for `<p>` without margin and `<h1>`-`<h6>`

https://bugs.webkit.org/show_bug.cgi?id=176776
rdar://problem/98459918

Reviewed by Ryosuke Niwa.

Inspired by(+ more): https://chromium.googlesource.com/chromium/src.git/+/8ff781cd5c1aabca068247de9a3f143645e80422

TextIterator currently decides to add two consecutive newlines
after a P element only if it has a large margin, while the spec
of innerText doesn't have this margin check at all. Extend it to
heading (H1, H2...) as well.

This patch removes the margin and extra line check to make TextIterator
more spec-compliant [1]:

[1] https://html.spec.whatwg.org/multipage/dom.html#the-innertext-idl-attribute

* Source/WebCore/editing/TextIterator.cpp:
(WebCore::shouldEmitExtraNewlineForNode):
* LayoutTests/imported/w3c/web-platform-tests/innerText/getter-expected.txt: Rebaselined
* LayoutTests/imported/w3c/web-platform-tests/html/dom/elements/the-innertext-and-outertext-properties/getter-expected.txt: Ditto
* LayoutTests/editing/execCommand/format-block-table-expected.txt: Rebaselined
* LayoutTests/editing/execCommand/format-block-multiple-paragraphs-in-pre-expected.txt: Ditto
* LayoutTests/imported/w3c/web-platform-tests/editing/other/formatblock-preserving-selection.tentative_styleWithCSS=false&block=h1-expected.txt: Ditto
* LayoutTests/imported/w3c/web-platform-tests/editing/other/formatblock-preserving-selection.tentative_styleWithCSS=true&block=h1-expected.txt: Ditto

NOTE: Unfortunately, too many test rebaseline to fit in
ChangeLog, which are mostly 'space' addition or deletion.

Canonical link: https://commits.webkit.org/278522@main